Home page all single post and projects are done

--- a/blogs/a-golden-investment-opportunity.html
+++ b/blogs/a-golden-investment-opportunity.html
@@ -63,225 +63,141 @@
     <div class="single-project">
       <div class="project-box">
         <div class="project project-content">
-          <h1>Blue World Sports Valley</h1>
+          <h1>A Golden Investment Opportunity</h1>
           <p>
-            Sports Valley Block is a new residential block launching in Blue
-            World City Islamabad. The real estate industry of Pakistan has
-            flourished exceptionally with the passage of time and one of the
-            most prominent developed housing societies in the capital of
-            Pakistan is Blue world city Islamabad. World City Sports Valley
-            Block is the new feather in the cap of Blue World City Islamabad.
-            Sports Valley Block has been launched by Blue World City Islamabad.
-            The Sports Valley Block comprises an up-to-date sports stadium that
-            is termed to be the largest stadium in Pakistan.
+            After getting huge accomplishments in New Metro City Kharian and
+            Golf City Gwadar, BSM Developer is going to construct a new project
+            named
+            <a href="../projects/new-metro-city.html"
+              >New Metro City Gujar Khan</a
+            >. The project offers all the up-to-date facilities and features at
+            budget-friendly rates. The creators have reserved a large area for
+            the development of exceptional features such as commercial zones,
+            parks, Wide Boulevard, and green belts. The society will be fenced
+            by a boundary wall with a foolproof system to deliver a
+            high-security level. New metro city Gujar Khan, is the ideal place
+            to invest these days as the project is in its pre-launched phase. An
+            incomparable master plan by an expert planner is one valid reason to
+            invest in New Metro City Gujar Khan. The project covers over 16,000
+            Kanal of land. The project plan of the New Metro City Housing Scheme
+            Gujar khan was designed by a team of experts, including architects
+            and civil engineers. A great deal of consideration is being given to
+            groundwork development to make it twinkle out in other housing
+            societies of Gujar khan.
           </p>
           <p>
-            The master plan of Blue World City Sports Valley Block offers 8
-            Marla, 10 Marla, and 1 Kanal plots and offers an ideal location with
-            wide boulevards with beautiful wide roads. Planners have designed
-            the infrastructure of the society so exceptionally that is meeting
-            the international criteria and is reading to set new standards.
-            Furthermore, the construction of the main entrance of the Sports
-            Valley Block has started in full swing. However, the main entrance
-            of this new block will be on the Main Chakri road and Adyala road,
-            creating it an ideal investment project. Right now it is one of the
-            most affordable housing projects in the area and has become quite
-            popular among investors. For those looking to invest in a
-            high-investment-return residential scheme, then this is the best
-            option.
+            New metro city Gujar Khan ‘WHERE DREAMS ARE TURNED INTO REALITY’
+            brings you the greatest profitable project with an ideally
+            accessible location. Away from all cacophony and a metropolitan site
+            with peace of mind and heart. Being a well-reputed and distinct
+            construction project, this user-oriented project is designed by
+            modern manufacturing and innovative think tanks and planners by BSM
+            Group, Extending and making a golden break for investment for people
+            who want to generate a pool of stock in real estate. Shopping
+            centers are being fabricated, creating new and unique classes of
+            housing societies, the business where residential constructions are
+            under development and there is considerably more than the New Metro
+            city Gujar Khan will bring to the table.
           </p>
-          <h3>Developers & Owners of Sports Valley Block</h3>
           <p>
-            It is a residential block of Blue World City that is owned by the
-            Blue Group of Companies (BGC), a renowned and foremost real estate
-            development company. Mr. Saad Nazir, a young businessperson, is the
-            owner of Blue Group Companies. Blue Group of Companies (BGC) are the
-            owners and developers of this prime project in which they are aiming
-            towards launching the concept of sustainable tourism with opulence
-            and grandeur provisions. It is pleasantly stated that Blue world
-            city has signed Esra Bilgiç as the brand ambassador. Blue Group of
-            Companies has signed a Memorandum of Understanding (MOU) with
-            internationally recognized China-based Shan Jian Municipal
-            Engineering Company to make sure and fulfill the promise of
-            high-class development which gives an edge to property investors to
-            invest and secure tomorrow. Moreover, this company is well known for
-            its leadership and high dependability standards, which is why this
-            society is some of the most advanced and innovative in terms of
-            design and infrastructure.
-          </p>
-          <h3>Salient Features of the Blue world city</h3>
-          <ul>
-            <li>Jamia Mosque, a replica of Blue Mosque, Turkey</li>
-            <li>Most affordable and multiple housing options</li>
-            <li>Modern and spacious commercial sites</li>
-            <li>The best educational institutions</li>
-            <li>Well-planned drainage and waste disposal system</li>
-            <li>Highly-trained and professional teachers</li>
-            <li>Foolproof security system</li>
-            <li>Boundary wall and gated community</li>
-            <li>Hospitals and pharmacies</li>
-            <li>Highly qualified doctors and nursing staff</li>
-            <li>Police station to maintain law and order</li>
-            <li>Well-developed roads</li>
-            <li>Specifically, a designated mass transportation system</li>
-            <li>Paved Walkways</li>
-            <li>Skilled maintenance and management workforce</li>
-            <li>A sophisticated drainage system</li>
-            <li>Underground supply of utilities</li>
-            <li>All the basic utility available 24/7</li>
-            <li>The largest themed water park</li>
-            <li>International Standard Infrastructure</li>
-            <li>Society`s Power Plant</li>
-          </ul>
-          <h3>Sports Valley Block Location</h3>
-          <p>
-            Sports valley block has direct access from the defense road and is
-            situated at the world’s first purpose-built tourist city, Blue world
-            city. This iconic project is in the immediate vicinity of major
-            landmarks of the twin cities. The project is situated at the
-            following distances:
+            The plot cuttings of New Metro City Gujar Khan is offering a range
+            of residential plots as follows:
           </p>
           <ul>
-            <li>5-minutes’ drive from Rawalpindi ring road</li>
-            <li>5-minutes’ drive from the Lahore Islamabad M2 motorway</li>
-            <li>10-minutes’ drive from CPEC Route</li>
-            <li>20 minutes drive from New Islamabad International Airport</li>
+            <li>5 Marla</li>
+            <li>7 Marla</li>
+            <li>10 Marla</li>
+            <li>1 Kanal</li>
           </ul>
-          <h3>NOC of Sports Valley Block</h3>
           <p>
-            The NOC (No Objection Certificate) of the Blue World City is in
-            process under the Rawalpindi Development Authority (RDA).
+            New Metro City Housing Scheme Gujar khan is offering commercial
+            plots as follows:
           </p>
-          <h3>Sports Valley Block Payment Plan</h3>
+          <ul>
+            <li>3 Marla</li>
+            <li>4 Marla</li>
+            <li>8 Marla</li>
+          </ul>
           <p>
-            Sports Valley Block consists of 5 Marla, 8 Marla, 10 Marla, and 1
-            Kanal residential plots with starting price of 20 lacs. The Payment
-            Plan of Blue World City Sports Valley Block is attached below:
+            New Metro City Housing Scheme Gujar Khan payment plan is economical
+            and pocket friendly. The payment plan of New Metro City Gujar Khan
+            is reasonably priced with easy installment agendas. The plots for
+            sale in Metro City are open for booking at pocket-friendly rates.
+            The administration and investors have paid special consideration to
+            keep the prices at the lowest rates. The low rates have empowered
+            low-income people to gain the advantage of the golden and profitable
+            investment opportunity.
           </p>
           <ul>
             <li>
-              5 Marla plot has the cost of 2200000 with an easy down payment of
-              150,000. The monthly installments are also feasible and are 23,750
-              with a 2-year payment plan.
+              The cost price for 5 Marla is Rs 1,990,000 with a down payment of
+              4,50,000 and an easy payment plan of 2 years. 5 marla offers you
+              to pay a monthly installment of 23,750.
             </li>
             <li>
-              8 Marla plot has the cost of 3380000 with an easy down payment of
-              231,000. The monthly installments are also reasonable and are
-              36,575 with a 2-year payment plan.
+              The cost price for 7 Marla is Rs 2,790,000 with a down payment of
+              550,000 and an easy payment plan of 2 years. 7 marla offers you to
+              pay a monthly installment of 40,400.
             </li>
             <li>
-              10 Marla plot has the cost of 4,125,000 with an easy down payment
-              of 281,250. The monthly installments are also reasonable and are
-              44,531 with a 2-year payment plan.
+              The cost price for 10 Marla is Rs 3,790,000 with a down payment of
+              750,000 and an easy payment plan of 2 years. 10 marla offers you
+              to pay a monthly installment of 48,750.
             </li>
             <li>
-              1 Kanal plot has the cost of 7,700,000 with an easy down payment
-              of 525,000. The monthly installments are also practicable and are
-              83,125 with a 2-year payment plan.
-            </li>
-          <img src="../images/project/sports-valley/payment-plan.jpeg" alt="" />
-          <h3>Features & Amenities</h3>
-          <p>
-            The recently built Sports Valley Block offers its inhabitants many
-            current and extravagant conveniences. However, these facilities are 
-            part of a classy multi-purpose real estate development project. Some 
-            of these facilities have been termed here:
-          </p>
-          <ul>
-            <li>24/7 Security</li>
-            <li>Ideal Location</li>
-            <li>Health facilities</li>
-            <li>Gated Community</li>
-            <li>Water Filtration Plant</li>
-            <li>Water, Gas & Electricity</li>
-            <li>State-of-the-art stadium</li>
-            <li>A Wide Network of Carpeted Roads</li>
-          </ul>
-          <h3>Blue World City Sports Valley Block Signature Amenities</h3>
-          <ul>
-            <li>Villagio Mall</li>
-            <li>Pakistan’s largest cricket stadium</li>
-            <li>Commercial hubs</li>
-            <li>Open air gymnasiums</li>
-            <li>Blue Mosque</li>
-            <li>Torch hotel</li>
-            <li>Recreational Parks</li>
-            <li>Hockey fields</li>
-          </ul>
-          <h3>Invest in Blue World City Sports Valley Block</h3>
-          <p>
-            Blue World City Sports Valley Block is another addition to the already 
-            noteworthy present blocks of Blue World City including the Hollywood 
-            block, waterfront block, Awami block, overseas block, and general block. 
-            They have now launched a new block with a new theme, unique features, and 
-            amenities. There are numerous causes and solid reasons to invest in Sports 
-            Valley Block. It is the finest investment opportunity in Islamabad for 
-            venture capitalists seeking to spend on a profitable project. However, 
-            some of the main investment reasons are as follows:
-          </p>
-          <ul>
-            <li>Prime location</li>
-            <li>Affordable rates</li>
-            <li>Well-known developers</li>
-            <li>Development in process</li>
-            <li>World-class infrastructure development</li>
-          </ul>
-          <h3>Booking requirement</h3>
-          <p>
-            Regal Marketing believes in building a healthy and trustworthy relationship 
-            with you lined by transparency, so we commend examining about the latest 
-            documentation necessary for booking but it’s a cinch. Documents required 
-            for making a reservation for a plot are as follows:
-          </p>
-          <ul>
-            <li>Applicant Name</li>
-            <li>Copies of Applicant CNIC</li>
-            <li>Contact Number</li>
-            <li>Passport size picture</li>
-            <li>Nominee Name</li>
-            <li>Copies of nominee CNIC</li>
-            <li>Permanent address</li>
-            <li>
-              Down payment in the form of cash, pays order, or cross cheque
+              The cost price for 1 Kanal is Rs 6,990,000 with a down payment of
+              1,050,000 and an easy payment plan of 2 years. 1 Kanal offers you
+              to pay a monthly installment of 111,250.
             </li>
           </ul>
           <p>
-            <a href="https://regalmarketing.com.pk/"
-              >Regal Marketing Pvt. Ltd</a
-            > also provides you an opportunity to invest in New Metro City Gujar Khan, 
-            Kingdom Valley Islamabad, Silver City, Discovery Gardens Islamabad, Eighteen 
-            Islamabad, Regal Empire, and Blue World city.
+            The payment plan is highly affordable for investors. Liquidity is
+            the term that can be used while describing New Metro City Gujar Khan
+            and can be explained as the capacity of a resource for being changed
+            over into cash. In simple words, if there is a customer for the
+            resource in the marketplace, it would be a good idea for him to
+            decide to exit from the venture. A New Metro city Gujar Khan has a
+            high pace of selling/buying in the market and is runny and valid for
+            a project that has a decent stand-up on the front picture
           </p>
-          <h3>Sports Valley Block Frequently Asked Questions (FAQs)</h3>
-          <h4>What is Sports Valley Block?</h4>
           <p>
-            Sports Valley is a residential block launching in the Blue World City, 
-            Islamabad, which includes advanced and Pakistan’s largest sports stadium 
-            as well as well-designed infrastructure.
+            New Metro city Gujar Khan is a task of
+            <a
+              href="https://www.newmetrocity.com.pk/page/about-bsm-developers-pvt-ltd"
+              >BSM Group</a
+            >
+            that grips valid planning of handover as well as managing
+            prestigious land projects in Pakistan. Consequently, interests in
+            New Metro city Gujar Khan promise a happy living and you can expect
+            massive profits from the project. The vivid development and rising
+            populace in a very short period in our country have changed over the
+            city into a noteworthy crucial point of investment in Pakistan. Real
+            estate has seen the rise of various artistic and innovative land
+            projects lately. In accord with various assumptions open doors,
+            these tenable land projects guarantee substantial profits for
+            financial sponsors in the range of 3 to 4 years. New Metro city
+            Gujar Khan is a flawless housing society with unmatched offices and
+            perfect vision. Each block of the general and basic amenities is
+            ready to go with a novel viewpoint and usefulness to give its
+            inhabitants a magnifying, luxurious and new standard of living.
           </p>
-          <h4>What is the location of Sports Valley Block?</h4>
-          <p>It is located near Chakri Road in Blue World City.</p>
-          <h4>Who are the possessors & developers of Sports Valley Block?</h4>
+          <h3>Bottom Line</h3>
           <p>
-            Blue Group of Companies (BGC) are the owners and developers of this 
-            prime project in which they are aiming towards launching the concept 
-            of sustainable tourism with opulence and grandeur provisions
-          </p>
-          <h4>What is the NOC status of Sports Valley Block?</h4>
-          <p>
-            The NOC of Blue World City is under process by the Rawalpindi Development 
-            Authority and the developers have applied for the extension of Sports 
-            Valley Block.
-          </p>
-          <h4>What are plot dimensions existing in Sports Valley Block?</h4>
-          <p>
-            5, Marla, 8 Marla, 10 Marla, and 1 Kanal plots are available for sale 
-            in Sports Valley Block.
-          </p>
-          <h4>How Sports Valley Block is different from other blocks of Blue World City Islamabad?</h4>
-          <p>
-            Sports Valley block is based on the theme of focusing on sports grounds, 
-            open-air gymnasiums, sports arenas, and much more. 
+            New Metro City Gujar Khan is offering its investors a huge profit
+            and is urging its financial backers to profit from this
+            once-in-a-blue moon speculation opportunity and benefit from it. The
+            general vision of society is amazing. This housing plan isn’t just
+            reasonable for speculation, yet additionally, its solid private and
+            business area is an ideal spot for yourself as well as your friends
+            and family to live and work at. In light of the whole thing, New
+            Metro city Gujar Khan has all the tags of being a well-thought-of
+            project, and appreciated gateway for the fiscal financiers and the
+            ones who admire living in it. From a piece of land, New Metro city
+            Gujar Khan is now fetching a classy urban city to its end users and
+            investors to explore the luxurious getaway of a state-of-the-art
+            society. So, Regal Marketing encourages you to take advantage of
+            this open door of profit and book yourself a secure spot in this
+            amazing new mission by BSM Developers.
           </p>
         </div>
         <div class="project project-inquiry">
