--- a/home.html
+++ b/home.html
@@ -253,7 +253,7 @@
               <img src="images/blog-3.jpg" />
             </div>
             <div class="card-content">
-              <a href="#">
+              <a href="blogs/a-golden-investment-opportunity.html">
                 <h1 data-aos="fade-up">A Golden Investment Opportunity</h1>
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
@@ -263,7 +263,12 @@
                 project named “New Metro City Gujar khan”. The project offers
                 all the up-to-date facilities
               </p>
-              <a href="#" class="read-more" data-aos="fade-up">Read More</a>
+              <a
+                href="blogs/a-golden-investment-opportunity.html"
+                class="read-more"
+                data-aos="fade-up"
+                >Read More</a
+              >
             </div>
           </div>
         </div>
