--- a/videos.html
+++ b/videos.html
@@ -41,7 +41,9 @@
           <li data-aos="zoom-out">
             <a href="product&services.html">Products & Services</a>
           </li>
-          <li data-aos="zoom-out"><a href="">Business Insights</a></li>
+          <li data-aos="zoom-out">
+            <a href="business-insights.html">Business Insights</a>
+          </li>
           <li data-aos="zoom-out">
             <a href="videos.html" style="color: #f9ae41">Videos</a>
           </li>
@@ -224,7 +226,9 @@
             <li data-aos="fade-up">
               <a href="product&services.html">Products & Services</a>
             </li>
-            <li data-aos="fade-up"><a href="">Business Insights</a></li>
+            <li data-aos="fade-up">
+              <a href="business-insights.html">Business Insights</a>
+            </li>
             <li data-aos="fade-up"><a href="videos.html">Videos</a></li>
             <li data-aos="fade-up"><a href="">Careers</a></li>
             <li data-aos="fade-up"><a href="contact.html">Contact</a></li>
