--- a/projects/regal-emporium.html
+++ b/projects/regal-emporium.html
@@ -50,7 +50,9 @@
           <li data-aos="zoom-out">
             <a href="../product&services.html">Products & Services</a>
           </li>
-          <li data-aos="zoom-out"><a href="">Business Insights</a></li>
+          <li data-aos="zoom-out">
+            <a href="../business-insights.html">Business Insights</a>
+          </li>
           <li data-aos="zoom-out"><a href="../videos.html">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
           <li data-aos="zoom-out">
@@ -412,7 +414,9 @@
             <li data-aos="fade-up">
               <a href="../product&services.html">Products & Services</a>
             </li>
-            <li data-aos="fade-up"><a href="">Business Insights</a></li>
+            <li data-aos="fade-up">
+              <a href="../business-insights.html">Business Insights</a>
+            </li>
             <li data-aos="fade-up"><a href="../videos.html">Videos</a></li>
             <li data-aos="fade-up"><a href="">Careers</a></li>
             <li data-aos="fade-up"><a href="../contact.html">Contact</a></li>
