--- a/business-insights.html
+++ b/business-insights.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <title>Regal Marketing | Video</title>
+    <title>Regal Marketing | Business Insights</title>
 
     <link
       rel="stylesheet"
