Business Insights Section

--- a/business-insights.html
+++ b/business-insights.html
@@ -60,16 +60,37 @@
       </div>
     </header>
 
-    <section>
-      <div class="row">
-        <div class="col">
-          <h3>Research</h3>
-        </div>
-        <div class="col">
-          <h3>The Regal Blog</h3>
-        </div>
-        <div class="col">
-          <h3>Regals News</h3>
+    <section class="services">
+      <div class="container">
+        <h1 class="section-heading" data-aos="fade-up">Business Insights</h1>
+        <p data-aos="fade-up">
+          Standing close to our Customers, as we are ready to serve you with
+          improved Solutions
+        </p>
+        <div class="card-wrapper">
+          <div class="card" data-aos="zoom-in">
+            <h2 data-aos="fade-up">Research</h2>
+            <p data-aos="fade-up">
+              Managing workspaces, retail, residential or industrial property,
+              efficiently and cost-effectively, handling the loops and enhancing
+              the worth.
+            </p>
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <h2 data-aos="fade-up">The Regal Blog</h2>
+            <p data-aos="fade-up">
+              Trade your assets with us. You might be able to build a larger and
+              more valuable property than you could have on each parcel
+              separately.
+            </p>
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <h2 data-aos="fade-up">Regal News</h2>
+            <p data-aos="fade-up">
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
         </div>
       </div>
     </section>
