Business insights styling changes

--- a/business-insights.html
+++ b/business-insights.html
@@ -60,7 +60,7 @@
       </div>
     </header>
 
-    <section class="services">
+    <section class="business-insights">
       <div class="container">
         <h1 class="section-heading" data-aos="fade-up">Business Insights</h1>
         <p data-aos="fade-up">
