Business insights page research part is done

--- a/business-insights.html
+++ b/business-insights.html
@@ -95,6 +95,23 @@
       </div>
     </section>
 
+    <!--Research Section-->
+    <section
+      class="research"
+      style="background-image: url('images/new-header-2.png')"
+    >
+      <h1 data-aos="fade-bottom">Research</h1>
+      <div class="bar-line"></div>
+      <p data-aos="fade-bottom">
+        Regal Marketing Network is among the fastest-growing marketing network
+        around the world having its offices in many cities of Pakistan and also
+        worldwide agents.
+      </p>
+      <button class="btn btn-primary" data-aos="fade-bottom">
+        VIEW ALL RESEARCH
+      </button>
+    </section>
+
     <footer>
       <div class="row">
         <div class="col">
