Business Insights reserch section is on its way

--- a/business-insights.html
+++ b/business-insights.html
@@ -112,6 +112,14 @@
       </button>
     </section>
 
+    <section class="research-grid">
+      <div class="container">
+        <div class="card-wrapper">
+          <div class="card"></div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="row">
         <div class="col">
