Business Insights Blogs section start

--- a/about.html
+++ b/about.html
@@ -110,10 +110,14 @@
               </a>
               <span data-aos="fade-up">Irfan Rafiq</span>
               <p data-aos="fade-up">
-                Real estate investments have the muscle to unlock endless
-                opportunities for those who compel to the business or to save
-                for the better future. The passive income that each investment
-                produces with the passage of time
+                Progress for me has never been a fantasy. It has always been an
+                aloof reality and once one landmark is achieved, there is always
+                another one waiting to be crossed. It is with this belief that I
+                started Regal Marketing Pvt. Ltd, a company that was in the
+                business of real estate dealing with the leading housing
+                societies of the town. Under my leadership, the company has
+                achieved significant growth in business and which leads to
+                success and trustworthiness among the customers.
               </p>
             </div>
           </div>
@@ -124,10 +128,13 @@
               </a>
               <span data-aos="fade-up">Shahzaib Khan</span>
               <p data-aos="fade-up">
-                Real estate investments have the muscle to unlock endless
-                opportunities for those who compel to the business or to save
-                for the better future. The passive income that each investment
-                produces with the passage of time
+                Over the span of time, we have developed an organized structure
+                to manage our business set-ups competently. This has given us an
+                edge over our competitors and made us a better market player.
+                The ongoing unstable market conditions demand a more dedicated
+                strategy to contest in the market. We aim to take crucial
+                actions to strengthen our customer gratification, and employee
+                relation system and improve our operations.
               </p>
             </div>
             <div class="img-wrapper flex-1">
