--- a/business-insights.html
+++ b/business-insights.html
@@ -64,31 +64,30 @@
       <div class="container">
         <h1 class="section-heading" data-aos="fade-up">Business Insights</h1>
         <p data-aos="fade-up">
-          Standing close to our Customers, as we are ready to serve you with
-          improved Solutions
+          Let's see the world of real estate from a different perspective
+          transforming from commitments to <br />
+          inovations, summed up in our Regal Blogs, Researches and News.
         </p>
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
             <h2 data-aos="fade-up">Research</h2>
             <p data-aos="fade-up">
-              Managing workspaces, retail, residential or industrial property,
-              efficiently and cost-effectively, handling the loops and enhancing
-              the worth.
+              Apart from the real estate world, Regal Research cover diverse
+              topic like latest market trends, taxations and economic analysis.
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
             <h2 data-aos="fade-up">The Regal Blog</h2>
             <p data-aos="fade-up">
-              Trade your assets with us. You might be able to build a larger and
-              more valuable property than you could have on each parcel
-              separately.
+              We bring latest news and market outlook along with experts
+              opinions and guidelines.
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
             <h2 data-aos="fade-up">Regal News</h2>
             <p data-aos="fade-up">
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              Not worthy information latest events and market trends are all
+              here.
             </p>
           </div>
         </div>
@@ -98,14 +97,17 @@
     <!--Research Section-->
     <section
       class="research"
-      style="background-image: url('images/new-header-2.png')"
+      style="
+        background-image: url('images/new-header-2.png');
+        background-position: center center;
+        background-size: cover;
+      "
     >
       <h1 data-aos="fade-bottom">Research</h1>
       <div class="bar-line"></div>
       <p data-aos="fade-bottom">
-        Regal Marketing Network is among the fastest-growing marketing network
-        around the world having its offices in many cities of Pakistan and also
-        worldwide agents.
+        Apart from the real estate world, Regal Research cover diverse topic
+        like latest market trends, taxations and economic analysis.
       </p>
       <button class="btn btn-primary" data-aos="fade-bottom">
         VIEW ALL RESEARCH
@@ -115,9 +117,44 @@
     <section class="research-grid">
       <div class="container">
         <div class="card-wrapper">
-          <div class="card"></div>
+          <div class="card">
+            <h2>Euro Vs. Dollar</h2>
+            <p>
+              The euro has tumbled below parity as compared to the dollar,
+              sinking to the lowest level of this fiscal year and ending a
+              one-to-one exchange rate with the U.S. currency.
+            </p>
+          </div>
+          <div class="card">
+            <h2>Ways to Increase Your Property’s worth</h2>
+            <p>
+              Most financiers practice the buy-and-hold approach to get a return
+              on assets management and investment. However, there are also many
+              other means to increase a property’s worth.
+            </p>
+          </div>
         </div>
       </div>
+    </section>
+
+    <!-- Blogs Section -->
+    <section
+      class="articles"
+      style="
+        background-image: url('images/new-header.jpg');
+        background-position: center center;
+        background-size: cover;
+      "
+    >
+      <h1 data-aos="fade-bottom">The Regal Blog</h1>
+      <div class="bar-line"></div>
+      <p data-aos="fade-bottom">
+        We bring latest news and market outlook along with experts opinions and
+        guidelines.
+      </p>
+      <button class="btn btn-primary" data-aos="fade-bottom">
+        VIEW ALL BLOGS
+      </button>
     </section>
 
     <footer>
